--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/nickmisasi13/godaddy-ddns/issues"
   },
-  "homepage": "https://github.com/nickmisasi13/godaddy-ddns#readme"
+  "homepage": "https://github.com/nickmisasi13/godaddy-ddns#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0"
+  }
 }
